# tinyrenderer

./: .clang-format  .editorconfig  CMakeLists.txt  CMakeSettings.json
cmake/: CMakeHelpers.cmake
scripts/: code_format.bat
src/: CMakeLists.txt  main.cpp  model.cpp  model.h  tga.cpp  tga.h  util.cpp  util.h  vec2.h  vec3.h
